Heading and input added

--- a/index.html
+++ b/index.html
@@ -16,19 +16,15 @@
 <div class="container-fluid">
     <h1>Score Board Tracker</h1>
 
-<!--<div class="row">-->
-<!--    <div class="col" style="background-color: cornsilk">-->
-<!--        1 of 2-->
-<!--    </div>-->
-<!--    <div class="col" style="background-color: #005cbf">-->
-<!--        2 of 2-->
-<!--    </div>-->
-<!--</div>-->
 
 <div class="container px-lg-5">
     <div class="row mx-lg-n5">
-        <div class="col py-3 px-lg-5 border" style="background-color: darkviolet"> 1 of 2</div>
-        <div class="col py-3 px-lg-5 border" style="background-color: darkgrey"> 2 of 2</div>
+        <div class="col py-3 px-lg-5 border" style="background-color: darkgrey">
+            <input type="text" aria-label="team1" class="form-control">
+        </div>
+        <div class="col py-3 px-lg-5 border" style="background-color: darkgrey">
+            <input type="text" aria-label="team2" class="form-control">
+        </div>
     </div>
 </div>
 </div>
