team 1 and 2 change name edit button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 
     <title>Score Board</title>
 </head>
@@ -20,9 +21,24 @@
 <div class="container px-lg-5">
     <div class="row mx-lg-n5">
         <div class="col py-3 px-lg-5 border" style="background-color: darkgrey">
+            <h3>Team 1</h3>
+            <button>
+                <svg id="i-edit" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                    <path d="M30 7 L25 2 5 22 3 29 10 27 Z M21 6 L26 11 Z M5 22 L10 27 Z" />
+                </svg>
+            </button>
             <input type="text" aria-label="team1" class="form-control">
         </div>
         <div class="col py-3 px-lg-5 border" style="background-color: darkgrey">
+            <div>
+            <h3>Team 2</h3>
+                <button>
+                    <svg id="i-edit" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                        <path d="M30 7 L25 2 5 22 3 29 10 27 Z M21 6 L26 11 Z M5 22 L10 27 Z" />
+                    </svg>
+                </button>
+
+            </div>
             <input type="text" aria-label="team2" class="form-control">
         </div>
     </div>
