index.js created

--- a/index.html
+++ b/index.html
@@ -58,17 +58,7 @@
 </div>
 </a>
 
-<script>
-    function on() {
-        document.getElementById("overlay").style.display = "block";
-
-        setTimeout(on, 3000);
-    }
-
-    function off() {
-        document.getElementById("overlay").style.display = "none";
-
-    }
+<script src="js/index.js">
 
 </script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
