--- a/index.html
+++ b/index.html
@@ -38,27 +38,20 @@
                 <div class="row mx-lg-n5" id="teamBlock">
                     <div class="col py-3 px-lg-5 border"  style="background-color: darkgrey">
                     <div id="Team1"><h3>Team</h3></div>
-                        <button type="button" name="team1" hidden >
-                            <svg id="i-edit" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-                                <path d="M30 7 L25 2 5 22 3 29 10 27 Z M21 6 L26 11 Z M5 22 L10 27 Z" />
-                            </svg>
-                        </button>
                         <div id="Score1">0</div>
                         <div>
-                            <button class="btnPlus"><i class="ion-ios-plus"></i></button>
+                            <button class="btnPlus1"><i class="ion-ios-plus"></i></button>
                             <button> <i class="ion-md-remove-circle"></i></button>
                         </div>
                     </div> <!--End Team 1-->
-
                     <div class="col py-3 px-lg-5 border" style="background-color: darkgrey">
                         <div>
                         <div id="Team2"><h3>Team</h3></div>                       
                         <div id="Score2">0</div>
                         <div>
-                            <button class="btnPlus"><i class="ion-ios-plus"></i></button>
+                            <button class="btnPlus2"><i class="ion-ios-plus"></i></button>
                             <button> <i class="ion-md-remove-circle"></i></button>
-                        </div>
-                       
+                        </div>  
                     </div><!--End Team 2-->
                 </div> 
             </div><!--End Team Blocks-->
