--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div id="Score1">0</div>
                         <div>
                             <button class="btnPlus1"><i class="ion-ios-plus"></i></button>
-                            <button> <i class="ion-md-remove-circle"></i></button>
+                            <button class="btnMinus1"> <i class="ion-md-remove-circle"></i></button>
                         </div>
                     </div> <!--End Team 1-->
                     <div class="col py-3 px-lg-5 border" style="background-color: darkgrey">
@@ -50,7 +50,7 @@
                         <div id="Score2">0</div>
                         <div>
                             <button class="btnPlus2"><i class="ion-ios-plus"></i></button>
-                            <button> <i class="ion-md-remove-circle"></i></button>
+                            <button class="btnMinus2"> <i class="ion-md-remove-circle"></i></button>
                         </div>  
                     </div><!--End Team 2-->
                 </div> 
