Revert "overlay removed"
This reverts commit aa2406173e3eb3f95144c8eef6e5c910008458e2.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <title>Score Board</title>
     </head>
     <body>
+   
+        <!-- Coming Soon Overlay -->
+        <div id="overlay" onclick="off()">
+            <div id="text">
+                Coming Soon
+            </div>
+        </div>
+
+        <!--<a onclick="on()">-->
         <div class="container-fluid">
 
             <div class="sidebar"></div>
@@ -49,6 +58,7 @@
             </div><!--End Team Blocks-->
 
         </div> <!--End container-fluid-->
+        <!--</a>-->
 
         <script src="js/index.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
