add icon updated

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div id="Team1"><h3>Team</h3></div>
                         <div id="Score1">0</div>
                         <div>
-                            <button class="btnPlus1"><i class="ion-ios-plus"></i></button>
+                            <button class="btnPlus1"><i class="ion-ios-add-circle"></i></button>
                             <button class="btnMinus1"> <i class="ion-md-remove-circle"></i></button>
                         </div>
                     </div> <!--End Team 1-->
@@ -40,7 +40,7 @@
                         <div id="Team2"><h3>Team</h3></div>                       
                         <div id="Score2">0</div>
                         <div>
-                            <button class="btnPlus2"><i class="ion-ios-plus"></i></button>
+                            <button class="btnPlus2"><i class="ion-ios-add-circle"></i></button>
                             <button class="btnMinus2"> <i class="ion-md-remove-circle"></i></button>
                         </div>  
                     </div><!--End Team 2-->
