points values changes button added

--- a/index.html
+++ b/index.html
@@ -47,6 +47,30 @@
                 </div> 
             </div><!--End Team Blocks-->
 
+            <p>
+                    <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                        Change score points
+                    </a>
+
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+               
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <button class="btn btn-outline-secondary" type="button" id="button-addon1">Button</button>
+                    </div>
+                        <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                    </div>
+
+                     <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <button class="btn btn-outline-secondary" type="button" id="button-addon1">Button</button>
+                    </div>
+                        <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                    </div>
+            </div>
+
         </div> <!--End container-fluid-->
 
         <script src="js/index.js"></script>
