--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!--Team Blocks-->
             <div class="container px-lg-5">
                 <div class="row mx-lg-n5" id="teamBlock">
-                    <div class="col py-3 px-lg-5 border"  style="background-color: darkgrey">
+                    <div class="col py-3 px-lg-5 border" >
                     <div id="Team1"><h3>Team</h3></div>
                         <div id="Score1">0</div>
                         <div>
@@ -35,7 +35,7 @@
                             <button class="btnMinus1"> <i class="ion-md-remove-circle"></i></button>
                         </div>
                     </div> <!--End Team 1-->
-                    <div class="col py-3 px-lg-5 border" style="background-color: darkgrey">
+                    <div class="col py-3 px-lg-5 border" >
                         <div>
                         <div id="Team2"><h3>Team</h3></div>                       
                         <div id="Score2">0</div>
@@ -46,6 +46,8 @@
                     </div><!--End Team 2-->
                 </div> 
             </div><!--End Team Blocks-->
+
+                <!--
 
             <p>
                     <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
@@ -70,6 +72,7 @@
                         <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
                     </div>
             </div>
+            -->
 
         </div> <!--End container-fluid-->
 
