--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="sidebar"></div>
 
             <div id="title">
-                <h1>Score Board</h1>
+                <h1>Score Board - Tracker</h1>
             </div> 
              
             <!--Team Blocks-->
